--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,8 @@ License: GPL-3
 URL: CHANGEME
 BugReports: CHANGEME
 Encoding: UTF-8
-Depends: 
-    R (>= 3.0),
-    tensorflow
+Depends: R (>= 3.0)
+Imports: tensorflow
 Suggests:
     testthat,
     MASS,
