--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,10 @@ Type: Package
 Title: Stochastic Gradient Markov Chain Monte Carlo
 Version: 0.1.0.9000
 Authors@R: c(
-    person("Jack", "Baker", email = j.baker1@lancaster.ac.uk, role = c("aut", "cre", "cph")), 
+    person("Jack", "Baker", email = "j.baker1@lancaster.ac.uk", role = c("aut", "cre", "cph")),
     person( "Christopher", "Nemeth", role = c("aut", "cph") ), 
     person( "Paul", "Fearnhead", role = c( "aut", "cph" ) ),
-    person( "Emily B.", "Fox", role = c( "aut", "cph" ) )
-)
+    person( "Emily B.", "Fox", role = c( "aut", "cph" ) ))
 Maintainer: Jack Baker <j.baker1@lancaster.ac.uk>
 Description: R library for performing stochastic gradient MCMC
   including SGLD, SGHMC, SGNHT. Library is built on 'TensorFlow' 
