Updated bug report and URL

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,6 @@ Description: R library for performing stochastic gradient MCMC
   including SGLD, SGHMC, SGNHT. Library is built on 'TensorFlow' 
   <https://www.tensorflow.org/>, a library for efficient numerical computation.
 License: GPL-3
-URL: CHANGEME
-BugReports: CHANGEME
 Encoding: UTF-8
 Depends: R (>= 3.0), tensorflow
 Suggests:
@@ -25,4 +23,5 @@ Suggests:
 LazyData: true
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
+URL: https://stor-i.github.io/sgmcmc/, https://github.com/STOR-i/sgmcmc
 BugReports: https://github.com/STOR-i/sgmcmc/issues
