--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,6 +5,8 @@ authors:
     href: http://www.lancs.ac.uk/~nemeth/
   Paul Fearnhead:
     href: http://www.maths.lancs.ac.uk/~fearnhea/
+  Emily B. Fox:
+    href: https://homes.cs.washington.edu/~ebfox/
   STOR-i:
     href: http://www.stor-i.lancs.ac.uk/
     html: <img src="http://www.stor-i.lancs.ac.uk/MediaGallery/9-144.jpg" height="18" />
