--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Description: R library for performing stochastic gradient MCMC
 License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 3.0), tensorflow
+SystemRequirements: TensorFlow (https://www.tensorflow.org/)
 Suggests:
     testthat,
     MASS,
