--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ cache: packages
 
 install:
     sudo apt-get install python-pip python-virtualenv
-    R -e "install.packages('tensorflow', repos='http://cran.us.r-project.org')"
-    R -e "tensorflow::install_tensorflow()"
+    ./.travis-install.sh
