Updated travis install information

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: r
 cache: packages
 
 install:
-    sudo apt-get install python-pip python-virtualenv
-    pip install tensorflow
+- python
+- sudo apt-get install python-pip python-virtualenv
+- R -e "install.packages('tensorflow', repos='http://cran.us.r-project.org')"  
+- R -e "tensorflow::install_tensorflow()"  
