Updated travis install information

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ cache: packages
 
 install:
 - sudo apt-get install python-pip python-virtualenv
+- pip install --upgrade pip
 - R -e "install.packages('tensorflow', repos='http://cran.us.r-project.org')"  
 - R -e "tensorflow::install_tensorflow()"  
