--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+os: linux
+dist: trusty
 language: r
 cache: packages
 
 install:
 - sudo apt-get install python
 - sudo apt-get install python-pip python-virtualenv
-- sudo pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-1.2.1-cp34-cp34m-linux_x86_64.whl
+- sudo pip install -U pip
 - R -e "install.packages('tensorflow', repos='http://cran.us.r-project.org')"  
 - R -e "tensorflow::install_tensorflow()"  
