--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 language: r
 cache: packages
 
-install:
+before_install:
 - sudo apt-get install python
 - sudo apt-get install python-pip python-virtualenv
 - sudo pip install -U pip
