--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sgmcmc
 Type: Package
 Title: Stochastic Gradient Markov Chain Monte Carlo
-Version: 0.1.0.9000
+Version: 0.1.0
 Authors@R: c(
     person("Jack", "Baker", email = "j.baker1@lancaster.ac.uk", role = c("aut", "cre", "cph")),
     person( "Christopher", "Nemeth", role = c("aut", "cph") ), 
@@ -10,7 +10,7 @@ Authors@R: c(
     person( "STOR-i", role = c( "cph", "fnd" ) ))
 Maintainer: Jack Baker <j.baker1@lancaster.ac.uk>
 Description: R library for performing stochastic gradient MCMC
-  including SGLD, SGHMC, SGNHT. Library is built on 'TensorFlow' 
+  including SGLD, SGHMC, SGNHT and control variate methods. Library is built on 'TensorFlow'
   <https://www.tensorflow.org/>, a library for efficient numerical computation.
 License: GPL-3
 Encoding: UTF-8
