Add test and vignette skipping for CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,7 @@ Authors@R: c(
     person( "Christopher", "Nemeth", role = c("aut", "cph") ), 
     person( "Paul", "Fearnhead", role = c( "aut", "cph" ) ),
     person( "Emily B.", "Fox", role = c("aut", "cph") ), 
-    person( "STOR-i", role = c( "cph", "fnd" ) ))
-Maintainer: Jack Baker <j.baker1@lancaster.ac.uk>
+    person( "STOR-i", role = c( "cph" ) ))
 Description: R library for performing stochastic gradient MCMC
   including SGLD, SGHMC, SGNHT and control variate methods. Library is built on 'TensorFlow'
   <https://www.tensorflow.org/>, a library for efficient numerical computation.
