Added function to download datasets on the fly to reduce package size

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,16 +8,11 @@ Authors@R: c(
     person( "Paul", "Fearnhead", role = c( "aut", "cph" ) ),
     person( "Emily B.", "Fox", role = c("aut", "cph") ), 
     person( "STOR-i", role = c( "cph" ) ))
-Description: Provides functions that performs popular stochastic gradient Markov chain Monte Carlo 
-  (SGMCMC) methods on user specified models. The required gradients are automatically calculated 
-  using 'TensorFlow' <https://www.tensorflow.org/>, an efficient library for numerical computation.
-  This means only the log likelihood and log prior functions need to be specified. 
-  The methods implemented include stochastic gradient Langevin dynamics (SGLD), stochastic gradient
-  Hamiltonian Monte Carlo (SGHMC), stochastic gradient Nose-Hoover thermostat (SGNHT) and 
-  their respective control variate versions for increased efficiency.
+Description: Provides functions that performs popular stochastic gradient Markov chain Monte Carlo (SGMCMC) methods on user specified models. The required gradients are automatically calculated using 'TensorFlow' <https://www.tensorflow.org/>, an efficient library for numerical computation. This means only the log likelihood and log prior functions need to be specified. The methods implemented include stochastic gradient Langevin dynamics (SGLD), stochastic gradient Hamiltonian Monte Carlo (SGHMC), stochastic gradient Nose-Hoover thermostat (SGNHT) and their respective control variate versions for increased efficiency. References: M. Welling, Y. W. Teh (2011) <http://www.icml-2011.org/papers/398_icmlpaper.pdf>; T. Chen, E. B. Fox, C. E. Guestrin (2014) <arXiv:1402.4102>; N. Ding, Y. Fang, R. Babbush, C. Chen, R. D. Skeel, H. Neven (2014) <https://papers.nips.cc/paper/5592-bayesian-sampling-using-stochastic-gradient-thermostats>; J. Baker, P. Fearnhead, E. B. Fox, C. Nemeth (2017) <arXiv:1706.05439>.
 License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 3.0), tensorflow
+Imports: utils
 SystemRequirements: TensorFlow (https://www.tensorflow.org/)
 Suggests:
     testthat,
