--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(initSess,sgmcmccv)
 S3method(sgmcmcStep,sghmc)
 S3method(sgmcmcStep,sgld)
 S3method(sgmcmcStep,sgnht)
+export(getDataset)
 export(getParams)
 export(initSess)
 export(sghmc)
