--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 - sudo apt-get install python
 - sudo apt-get install python-pip python-virtualenv
 - sudo pip install -U pip
+- R -e "install.packages('devtools')"
 - R -e "install.packages('tensorflow', repos='http://cran.us.r-project.org')"  
 - R -e "tensorflow::install_tensorflow()"  
 
