--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ install:
 - R -e 'devtools::install_deps(dep = T)'
 
 script:
-- R CMD build .
+- travis_wait 30 R CMD build . # Additional wait time, building vignettes takes a while
 - travis_wait 30 R CMD check *tar.gz # Additional wait time, building vignettes takes a while
