--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(sgmcmcStep,sgnht)
 export(getDataset)
 export(getParams)
 export(initSess)
+export(installTF)
 export(sghmc)
 export(sghmcSetup)
 export(sghmccv)
