--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
 
 install:
 - R -e 'devtools::install_deps(dep = T)'
+- R -e 'devtools::install()'
+- R -e 'sgmcmc::InstallTF()'
 
 script:
 - travis_wait 30 R CMD build . # Additional wait time, building vignettes takes a while
