--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ install:
 - R -e "sgmcmc::installTF()"
 
 script:
-- travis_wait 30 R CMD build . # Additional wait time, building vignettes takes a while
-- travis_wait 30 R CMD check *tar.gz # Additional wait time, building vignettes takes a while
+- travis_wait 30 R CMD build . --no-build-vignettes
+- travis_wait 30 R CMD check *tar.gz --no-build-vignettes --no-vignettes
